# agentkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: canonical_examples.jsonl
data/evals/: README.md  adversarial.jsonl  enterprise.jsonl  eval_full.jsonl  golden_full.jsonl  golden_hard.json  golden_hard.jsonl  hard.jsonl  rag_knowledge.jsonl  synthetic.jsonl
data/evals/generators/: gen_eval_full.py  synth.py
data/knowledge/: leasing_kb.jsonl
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  AUTHORING_A_DOMAIN.md
docs/diagrams/: agent-flow.dot  capabilities.dot  context-zoom.dot  decision-boundary.dot  domain-plugin.dot  enterprise-architecture.dot  latency-budget.dot  pipeline.dot  sequence.mmd
src/agentkit/: __init__.py  _env.py  cli.py  config.py  cost.py  criteria.py  domain.py  graph.py  knowledge.py  llm_client.py  mock_llm.py  multiagent.py  observability.py  prompts.py  safety_rules.py  telemetry.py  tenants.py  tooling.py  web.py
src/agentkit/domains/: __init__.py  leasing.py
src/agentkit/evals/: cli.py  harness.py  judge.py  langsmith_eval.py  personalization.py  reply_classifier.py
src/agentkit/nodes/: context.py  emit.py  evaluate.py  llm.py  parse_output.py  safety.py  sanitize.py
src/agentkit/prod/: audit.py  logging_config.py  runner.py  tracing.py  worker.py
src/messaging_agent/: __init__.py  _env.py  channels.py  circuit_breaker.py  cli.py  cost.py  domain.py  geo.py  llm_client.py  multiagent.py  observability.py  pii.py  realpage_criteria.py  routing.py  state.py  timing.py  tooling.py  web.py  workflow.py
src/messaging_agent/domains/: leasing.py  support.py
src/messaging_agent/evals/: cli.py  langsmith_eval.py  semantic.py
src/messaging_agent/nodes/: abort.py  context.py  intake.py  llm.py  parse_output.py
src/messaging_agent/prod/: cache.py  tracing.py  (+4 more)
tests/: _mock_llm.py  conftest.py  test_agent.py  test_eval_coverage.py  test_evals.py  test_foundation.py  test_golden_regression.py  test_langsmith_eval.py  test_latency.py  test_llm_client.py  test_observability.py  test_prod.py  test_realpage.py  test_remediation.py  test_round2.py  test_support_domain.py  test_tooling.py
